@@ -2,6 +2,8 @@ Revision history for Perl extension Finance-Robinhood
 
 {{$NEXT}}
 
+    - Order type cheat sheet in Finance::Robinhood::Order
+
 0.02 2016-03-31T19:26:04Z
 
     - New demo script: eg/buy.pl
